--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -87,6 +87,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Warp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="FireBall",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Four)
 +ActionMappings=(ActionName="Action_Skill",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Select_Action",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
